RobustTrainSystem/src/main/java/dk/dtu/imm/trainsys/parser/RouteParser.java
// Generated from Route.g4 by ANTLR 4.2

package dk.dtu.imm.trainsys.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RouteParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ID=2, TRAINID=3, NEWLINE=4, WS=5, COMMENT=6;
	public static final String[] tokenNames = {
		"<INVALID>", "'STOP'", "ID", "TRAINID", "NEWLINE", "WS", "COMMENT"
	};
	public static final int
		RULE_parse = 0, RULE_trains = 1, RULE_train = 2, RULE_fullroute = 3, RULE_partialroute = 4;
	public static final String[] ruleNames = {
		"parse", "trains", "train", "fullroute", "partialroute"
	};

	@Override
	public String getGrammarFileName() { return "Route.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RouteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TrainsContext trains() {
			return getRuleContext(TrainsContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(10); trains();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TrainsContext extends ParserRuleContext {
		public TrainContext train(int i) {
			return getRuleContext(TrainContext.class,i);
		}
		public List<TrainContext> train() {
			return getRuleContexts(TrainContext.class);
		}
		public TrainsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trains; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).enterTrains(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).exitTrains(this);
		}
	}

	public final TrainsContext trains() throws RecognitionException {
		TrainsContext _localctx = new TrainsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_trains);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(12); train();
				}
				}
				setState(15); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TRAINID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TrainContext extends ParserRuleContext {
		public FullrouteContext fullroute() {
			return getRuleContext(FullrouteContext.class,0);
		}
		public TerminalNode TRAINID() { return getToken(RouteParser.TRAINID, 0); }
		public TrainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_train; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).enterTrain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).exitTrain(this);
		}
	}

	public final TrainContext train() throws RecognitionException {
		TrainContext _localctx = new TrainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_train);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); match(TRAINID);
			setState(18); fullroute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FullrouteContext extends ParserRuleContext {
		public List<PartialrouteContext> partialroute() {
			return getRuleContexts(PartialrouteContext.class);
		}
		public PartialrouteContext partialroute(int i) {
			return getRuleContext(PartialrouteContext.class,i);
		}
		public FullrouteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullroute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).enterFullroute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).exitFullroute(this);
		}
	}

	public final FullrouteContext fullroute() throws RecognitionException {
		FullrouteContext _localctx = new FullrouteContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fullroute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(20); partialroute();
				}
				}
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartialrouteContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(RouteParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RouteParser.ID, i);
		}
		public PartialrouteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partialroute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).enterPartialroute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteListener ) ((RouteListener)listener).exitPartialroute(this);
		}
	}

	public final PartialrouteContext partialroute() throws RecognitionException {
		PartialrouteContext _localctx = new PartialrouteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_partialroute);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(26); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(25); match(ID);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(28); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(31);
			_la = _input.LA(1);
			if (_la==1) {
				{
				setState(30); match(1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}